# mycelia

./: .gitignore  AGENTS.md  BUILD_STATE.md  Cargo.toml  README.md  ROADMAP.md  install.sh  prompt.md
.claude/: settings.json
.github/workflows/: candelabrum-bakeoff.yml  mycelia-review.yml
Formula/: mycelia.rb
benchmark/: candelabrum-oracle.md  run-bakeoff.mjs
crates/mycelia-cli/: Cargo.toml
crates/mycelia-cli/src/: log.rs  main.rs  mcp.rs  profile.rs  project.rs  semantic.rs
crates/mycelia-cli/tests/: cli.rs
crates/mycelia-core/: Cargo.toml
crates/mycelia-core/migrations/: 001_initial.sql  002_fts5.sql  003_embeddings.sql  004_source_extractor.sql  005_graph_edges.sql
crates/mycelia-core/src/: discovery.rs  embedding.rs  error.rs  evaluation.rs  extract.rs  lib.rs  model.rs  store.rs
docs/: architecture.md  evaluation.md  requirements.md  vision.md
docs/concept/: 00_vision.md  01_architecture.md  02_first_milestone.md  03_retrieval_evaluation.md  04_fts5_candidate.md  05_lightweight_reranking.md  06_stdio_mcp.md  07_named_corpus_profiles.md  08_semantic_embedding_probe.md  09_code_aware_chunking.md  10_distilled_mcp_surface.md  11_precision_first_hybrid.md  12_graphify_bakeoff.md  13_query_class_routing.md  14_incremental_embedding_writes.md  15_typescript_python_extraction.md  16_embedding_throughput.md  17_definition_ranking_and_routed_default.md  18_routed_mcp_server.md  19_user_journey_and_observability.md  20_freshness_and_staleness.md  21_homebrew_distribution.md  22_multi_corpus_server.md  23_typed_graph_edges.md  24_dogfood_and_protocol_adoption.md
docs/concept/v2/: 00_vision.md  01_product_thesis.md  02_user_journeys.md  03_project_layout_and_consent.md  04_ci_and_headless_agents.md  05_indexer_speed_and_artifacts.md  06_visibility_and_diagnostics.md  07_requirements_carry_forward.md  README.md
docs/evaluations/: phase_b2_interactive_measurement.md
docs/retrospective/: 01_timeline.md  02_lessons.md  03_evidence.md  README.md
examples/ai-sdk/: README.md  package-lock.json  package.json  review-agent.mjs  smoke-mcp.mjs
fixtures/eval/: forge-baseline.json  forge-expanded.json  forge-paraphrase.json  forge-structural.json  mycelia-v1-code.json  mycelia-v1-phase2.json
fixtures/smoke/v1/: architecture.md  obsolete.txt
fixtures/smoke/v2/: architecture.md
lessons-learned/: README.md
packaging/homebrew/: README.md
(+1 files in other folders)
