[workspace]
members = ["crates/mycelia-cli", "crates/mycelia-core"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"

[workspace.dependencies]
blake3 = "1.8.5"
tree-sitter = "0.25"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23.2"
clap = { version = "4.6.1", features = ["derive"] }
fastembed = { version = "5.17.2", default-features = false }
ignore = "0.4.26"
libc = "0.2"
ort = { version = "2.0.0-rc.12", default-features = false }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rmcp = { version = "1.8.0", default-features = false, features = ["macros", "server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt"] }
toml_edit = "0.23.7"
