[package]
name = "mycelia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mycelia"
path = "src/main.rs"

[dependencies]
clap.workspace = true
fastembed.workspace = true
mycelia-core = { path = "../mycelia-core" }
ort = { workspace = true, optional = true }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml_edit.workspace = true

[features]
default = ["semantic-download"]
semantic-download = [
    "fastembed/hf-hub-rustls-tls",
    "fastembed/ort-download-binaries-rustls-tls",
]
semantic-system-ort = [
    "dep:ort",
    "fastembed/hf-hub-rustls-tls",
    "fastembed/ort-load-dynamic",
    "ort/load-dynamic",
]

[dev-dependencies]
tempfile.workspace = true
